# Practica_MPI

./: README.md
VersionSecuencial/VersionSecuencial/CalcArboles/: Arbol.c  Arbol.h  CMakeLists.txt  CalcArbolesBB.c  CalcArbolesBB.h  CalcArbolesBB_MPI.c  CalcArbolesEX.c  CalcArbolesEX.h  CalcArbolesEX_MPI.c  CalcCerca.c  CalcCerca.h  CalcCercaMPI  Cerca.res  ConvexHull.c  ConvexHull.h  Solucion.c  Solucion.h  Utils.c  Utils.h  makefile  makefile_mpi
VersionSecuencial/VersionSecuencial/CalcArboles/ConjuntoPruebas/: Ejemplo1_3Arboles.res  Ejemplo1_3Arboles.txt  Ejemplo2_6Arboles.res  Ejemplo2_6Arboles.txt  EjemploGrande1_25Arboles.txt  EjemploGrande2_27Arboles.res  EjemploGrande2_27Arboles.txt  EjemploGrande3_30Arboles.res  EjemploGrande3_30Arboles.txt  EjemploGrande4_35Arboles.res  EjemploGrande4_35Arboles.txt  EjemploMedio1_15Arboles.res  EjemploMedio1_15Arboles.txt  EjemploMedio2_20Arboles.txt
VersionSecuencial/__MACOSX/: ._VersionSecuencial
VersionSecuencial/__MACOSX/VersionSecuencial/: ._.idea  ._CalcArboles
VersionSecuencial/__MACOSX/VersionSecuencial/CalcArboles/: ._.idea  ._Arbol.c  ._Arbol.h  ._CMakeLists.txt  ._CalcArbolesBB.c  ._CalcArbolesBB.h  ._CalcArbolesEX.c  ._CalcArbolesEX.h  ._CalcCerca.c  ._CalcCerca.h  ._Cerca.res  ._ConjuntoPruebas  ._ConvexHull.c  ._ConvexHull.h  ._Solucion.c  ._Solucion.h  ._Utils.c  ._Utils.h  ._cmake-build-debug  ._makefile  ._makefile_mpi
VersionSecuencial/__MACOSX/VersionSecuencial/CalcArboles/ConjuntoPruebas/: ._Ejemplo1_3Arboles.res  ._Ejemplo1_3Arboles.txt  ._Ejemplo2_6Arboles.res  ._Ejemplo2_6Arboles.txt  (+11 more)
